[project]
name = "modelviewer-hsm"
version = "1.0.0"
description = "Modelviewer habitat suitability model; created in EDITO-INFRA project T7.3"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["app.py"]
